added more features

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     <style>
     
     :root {
-            --primary: #00a2ff;
+            --primary: #ffffff;
             --secondary: #004400;
             --bg: #000000;
             --text: #ffffff;
-            --accent: #00aaaa;
+            --accent: #ffffff;
             --glow: 0 0 10px var(--primary);
         }
 
