--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
         <div class="contact-info">
             <span>📍 Mumbai, India</span>
             <span>📧 amanmaurya.me@gmail.com</span>
-            <span>🔗 <a href="https://www.linkedin.com/in/amanmaurya-me" target="_blank" style="color: var(--primary); text-decoration: none;">LinkedIn</a></span>
+            <span><a href="https://www.linkedin.com/in/amanmaurya-me" target="_blank" style="color: var(--primary); text-decoration: none;"><img src="https://upload.wikimedia.org/wikipedia/commons/c/ca/LinkedIn_logo_initials.png" alt="LinkedIn" style="height: 20px; vertical-align: middle;"> LinkedIn</a></span>
+            <span><a href="https://github.com/amanmaurya7" target="_blank" style="color: var(--primary); text-decoration: none;"><img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" alt="GitHub" style="height: 20px; vertical-align: middle;"> GitHub</a></span>
+            <span><a href="https://leetcode.com/amanmaurya02" target="_blank" style="color: var(--primary); text-decoration: none;"><img src="https://upload.wikimedia.org/wikipedia/commons/1/19/LeetCode_logo_black.png" alt="LeetCode" style="height: 20px; vertical-align: middle;"> LeetCode</a></span>
         </div>
     </div>
 
